--- a/index_landing.html
+++ b/index_landing.html
@@ -53,7 +53,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Условия</a>
+                        <a class="page-scroll" href="#statistics">Условия</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Стоимость</a>
@@ -68,9 +68,10 @@
                         <a class="page-scroll" href="#contact">Ответы</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#">Войти</a>
+                        <a class="profile-login" href="#1">Войти</a>
                     </li>
-                    <li>
+
+                    <li class="hidden-md">
                         <p class="header-phone">610-06-06</p>
                     </li>
                 </ul>
@@ -84,52 +85,44 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-xs-8 col-sm-6 col-sm-offset-2 col-md-4">
+                <div class="col-xs-8 col-sm-7 col-sm-offset-2 col-md-5 col-sm-offset-1">
                     <div class="intro-text">
-                        <div class="intro-lead-in">Тотальная</div>
-                        <div class="intro-lead-out">Эволюция</div>
-                        <div class="intro-heading pull-right">#ПРОРЫВ</div>
-                        <p style="display: inline-block;">это онлайн-конкурс, в котором ты тренируешь тело, улучшаешь физическую форму и получаешь реально крутые подарки, если твой результат круче, чем у других!</p>
-                        <a href="#services" class="page-scroll btn btn-xl">Учавствовать</a>
+                        <div class="intro-block-out">
+                            <div class="intro-lead-in">Тотальная</div>
+                            <div class="intro-lead-out">Эволюция</div>
+                            <div class="intro-block-in pull-right">
+                                <div class="intro-heading text-center">#ПРОРЫВ</div>
+                                <p>это онлайн-конкурс, в котором ты тренируешь тело, улучшаешь физическую форму и получаешь реально крутые подарки, если твой результат круче, чем у других!</p>
+                                <a href="#services" class="page-scroll btn btn-xl">Учавствовать</a>
+                            </div>       
+                        </div>                        
                     </div>
                 </div>
             </div>
         </div>
     </header>
 
-    <!-- Services Section -->
-    <section id="services">
+    <!-- Statistics Section -->
+    <section id="statistics">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
-            </div>
             <div class="row text-center">
                 <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                    <span class="circle-stat">
+                        <em>3</em>    
                     </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="statistic-heading">Месяца<br>конкурса</h4>
                 </div>
                 <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                    <span class="circle-stat">
+                        <em>4</em>    
                     </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="statistic-heading">Отборочных<br>тура</h4>
                 </div>
                 <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                    <span class="circle-stat">
+                        <em>100</em>    
                     </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="statistic-heading">Призовых<br>мест</h4>
                 </div>
             </div>
         </div>
