--- a/index_landing.html
+++ b/index_landing.html
@@ -320,7 +320,7 @@
             <div class="row">
                 <div class="col-xs-9 col-sm-9 col-md-7 col-lg-7">
                     <div class="intro-text" style="padding:0">
-                        <div class="intro-block-out">
+                        <div class="intro-block-out" style="padding-bottom:50px">
                             <div class="intro-lead-in" style="padding:0 80px">Вопросы</div>
                             <div class="intro-block-in pull-right">
                                 <div class="intro-heading text-center">Ответы</div>                                
@@ -416,6 +416,57 @@
         </div>
     </section>
 
+    <section id="partners" style="padding-top:75px">
+        <div class="container">
+            <div class="row">                    
+                <div class="col-xs-4 col-sm-7 col-md-7 col-lg-7">
+                    <div class="intro-text" style="padding:0">
+                        <div class="intro-block-out" style="padding-bottom:50px">
+                            <div class="intro-lead-in" style="padding:0 80px;">партнеры</div>
+                            <div class="intro-block-in pull-right">
+                                <div class="intro-heading text-center">конкурса</div>                                
+                            </div>       
+                        </div>                        
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <img src="img/logos/emprana.png" alt="">
+                </div>
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <img src="img/logos/GF.png" alt="">
+                </div>
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <img src="img/logos/ginza.png" alt="">
+                </div>
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <img src="img/logos/JK.png" alt="">
+                </div>
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <img src="img/logos/nk.png" alt="">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <img src="img/logos/skylab.jpg" alt="">
+                </div>
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <img src="img/logos/vzaperti.png" alt="">
+                </div>
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+
+                </div>
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+ 
+                </div>
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+
+                </div>
+            </div>
+        </div>
+    </section>
+   
     <footer>
         <div class="container">
             <div class="row">
@@ -433,11 +484,11 @@
                 </div>
                 <div class="col-md-5">
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        <li><a href="#"><i class="fa fa-vk"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
+                        <li><a href="#"><i class="fa fa-instagram"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="#"><i class="fa fa-youtube-square"></i></a>
                         </li>
                     </ul>
                 </div>
